--- a/src/app/strain-search/strain-search.component.html
+++ b/src/app/strain-search/strain-search.component.html
@@ -1,3 +1,36 @@
-<p>
-  strain-search works!
-</p>
+<div>
+  <label>Enter the name of a cannabis strain</label>
+  <input (keyup.enter)='searchStrains(strain.value); strain.value="";' type="text" class="form-control" #strain>
+  <button (click)='searchStrains(strain.value); strain.value="";' type="submit" class="btn waves-effect waves-light">Search</button>
+</div>
+
+
+<div id="results-container">
+  <div *ngIf='searchResults'>
+
+    <ul class="pagination">
+      <!-- LEFT ARROW -->
+      <li [ngClass]='{disabled: currentPageNumber == 1}'
+          (click)='currentPageNumber == 1 || changePages(currentPageNumber - 1)'  class="waves-effect">
+          <a href="#!"><i class="material-icons">chevron_left</i></a>
+      </li>
+
+      <span class="pages" *ngFor='let pageNumber of pageArray'>
+        <li [ngClass]='{active: currentPageNumber == pageNumber}' (click)='changePages(pageNumber)' class="waves-effect"><a href="#!">{{ pageNumber }}</a></li>
+      </span>
+
+      <!-- RIGHT ARROW -->
+      <li [ngClass]='{disabled: currentPageNumber == pageArray.length}'
+          (click)='currentPageNumber == pageArray.length || changePages(currentPageNumber + 1)' class="waves-effect">
+          <a href="#!"><i class="material-icons">chevron_right</i></a>
+      </li>
+    </ul>
+
+    <div class="search-results">
+      <div *ngFor='let strain of searchResults' class="strain-result">
+          <a routerLink="/strains/{{ strain.ucpc }}"><h4>{{ strain.name }}</h4></a>
+      </div>
+    </div>
+
+  </div>
+</div>
