--- a/src/app/strain-details/strain-details.component.html
+++ b/src/app/strain-details/strain-details.component.html
@@ -1,3 +1,22 @@
-<p>
-  strain-details works!
-</p>
+<div *ngIf='selectedStrain' class="detail-container">
+  <div class="tab-container">
+    <ul class="tabs">
+      <li class="tab col s3"><a href="#details">Details</a></li>
+      <li class="tab col s3"><a href="#flav-eff">Effects and Flavors</a></li>
+      <li class="tab col s3"><a href="#company">Seed Company</a></li>
+    </ul>
+
+    <div id="details" class="col s12">
+      <h2>{{ selectedStrain.name }}</h2>
+      <h5>UCPC: {{ selectedStrain.ucpc }}</h5>
+      <img src="{{ selectedStrain.image }}" class="circle main-image"/>
+      <h6>{{ selectedStrain.genetics.names }}</h6>
+      <h5>Lineage tracing back to:</h5>
+      <p *ngFor='let country of selectedStrain.geography.countries'>{{ country }}</p>
+    </div>
+
+    <div id="flav-eff" class="col s12">Effects and flavors works!</div>
+
+    <div id="company" class="col s12">Seed company works!</div>
+  </div>
+</div>
