method to get the strain effects and forkJoin them with the rest of the strain details before returning the strain. fix existing issue with the  materialize tabs

--- a/src/app/strain-details/strain-details.component.html
+++ b/src/app/strain-details/strain-details.component.html
@@ -1,5 +1,5 @@
-<div *ngIf='selectedStrain' class="detail-container">
-  <div class="tab-container">
+<div class="detail-container">
+  <div *ngIf='selectedStrain' class="tab-container">
     <ul class="tabs">
       <li class="tab col s3"><a href="#details">Details</a></li>
       <li class="tab col s3"><a href="#flav-eff">Effects and Flavors</a></li>
@@ -15,8 +15,12 @@
       <p *ngFor='let country of selectedStrain.geography.countries'>{{ country }}</p>
     </div>
 
-    <div id="flav-eff" class="col s12">Effects and flavors works!</div>
+    <div id="flav-eff" class="col s12">
+      Effects and flavors works!
+    </div>
 
-    <div id="company" class="col s12">Seed company works!</div>
+    <div id="company" class="col s12">
+      Seed company works!
+    </div>
   </div>
 </div>
