import ng2-charts and chart-js, add effects chart to strain-details component. commit may have a bug, pushing to test on another machine to know for sure

--- a/src/app/strain-details/strain-details.component.html
+++ b/src/app/strain-details/strain-details.component.html
@@ -16,7 +16,14 @@
     </div>
 
     <div id="flav-eff" class="col s12">
-      Effects and flavors works!
+      <div style='display: block'>
+        <canvas baseChart
+                [data]='getStrainEffectValues()'
+                [labels]='getStrainEffectKeys()'
+                [legend]='true'
+                [chartType]='"polarArea"'
+                [options]='chartOptions'></canvas>
+      </div>
     </div>
 
     <div id="company" class="col s12">
