--- a/src/app/strain-details/strain-details.component.html
+++ b/src/app/strain-details/strain-details.component.html
@@ -1,4 +1,4 @@
-<div class="detail-container">
+<div class="detail-container container">
   <div *ngIf='selectedStrain' class="tab-container">
     <ul class="tabs">
       <li class="tab col s3"><a href="#details">Details</a></li>
