--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body
+  background-color: #E1E2E1
+
+.btn
+  background-color: #00c8b7 !important
