--- a/src/app/strain-search/strain-search.component.sass
+++ b/src/app/strain-search/strain-search.component.sass
@@ -1,15 +1,25 @@
 .header-area
   height: 45vh
-  background-color: #00c853
+  background-color: #00c8b7
   text-align: center
 
   #title
     margin-top: 0px !important
-    padding-top: 15vh
+    padding-top: 10vh
 
+  #main-logo
+    height: 12vh
+    width: 12vh
+    border: solid 3px black
+    border-radius: 50%
+    padding: 20px 14px 14px 20px
+    background-color: #E1E2E1
 
 .container
   margin-top: -10vh
+
+  label
+    z-index: -1
 
   #results-container
 
