--- a/src/app/strain-details/strain-details.component.sass
+++ b/src/app/strain-details/strain-details.component.sass
@@ -1,2 +1,10 @@
+.detail-container
+  margin-top: 10vh
+
+  #details
+    height: 100%
+    width: 100%
+
 .main-image
   max-height: 200px
+  margin: 50px
