--- a/src/app/strain-details/strain-details.component.html
+++ b/src/app/strain-details/strain-details.component.html
@@ -9,12 +9,14 @@
     <div id="details" class="col s12 card">
       <div class="card-content">
         <div class="row">
-          <div class="col s6">
-            <h2>{{ selectedStrain.name }}</h2>
-            <h5>UCPC: {{ selectedStrain.ucpc }}</h5>
-            <small><a href="https://developers.cannabisreports.com/docs/ucpc-universal-cannabis-product-code">What is this?</a></small>
+          <div class="col s6" id='details-q1'>
+            <div class="">
+              <h2>{{ selectedStrain.name }}</h2>
+              <h5>UCPC: {{ selectedStrain.ucpc }}</h5>
+              <small><a target='_blank' href="https://developers.cannabisreports.com/docs/ucpc-universal-cannabis-product-code">What is this?</a></small>
+            </div>
           </div>
-          <div class="col s6 center-align">
+          <div class="col s6 center-align" id='details-q2'>
             <img src="{{ selectedStrain.image }}" class="circle main-image"/>
           </div>
         </div>
