--- a/src/app/strain-details/strain-details.component.sass
+++ b/src/app/strain-details/strain-details.component.sass
@@ -1,6 +1,13 @@
 .detail-container
   margin-top: 10vh
 
-.main-image
-  max-height: 200px
-  margin: 50px
+  #details-q1
+
+  #details-q2
+    img
+      max-height: 200px
+      margin: 50px
+
+  #genetics
+    p
+      font-size: 35px
