--- a/src/app/strain-search/strain-search.component.sass
+++ b/src/app/strain-search/strain-search.component.sass
@@ -5,21 +5,27 @@
 
   #title
     margin-top: 0px !important
-    padding-top: 10vh
+    padding-top: 5vh
+    font-family: pacifico
+    font-style: italic
+    font-size: 85pt
 
   #main-logo
-    height: 12vh
-    width: 12vh
-    border: solid 3px black
-    border-radius: 50%
-    padding: 20px 14px 14px 20px
-    background-color: #E1E2E1
+    height: 150px
+    width: 150px
+    // border: solid 3px black
+    // border-radius: 50%
+    // padding: 20px 14px 14px 20px
+    // background-color: #E1E2E1
 
 .container
   margin-top: -10vh
 
   label
     z-index: -1
+
+  .landing-description
+    font-size: 20px
 
   #results-container
 
