--- a/src/app/strain-details/strain-details.component.sass
+++ b/src/app/strain-details/strain-details.component.sass
@@ -1,5 +1,19 @@
+.bg-area
+  width: 100%
+  height: 45vh
+  background-color: #00c8b7
+
 .detail-container
-  margin-top: 10vh
+  margin-top: -25vh
+  height: 50vh
+
+  .back-button
+    height: 5vh
+    width: 5vh
+    margin-bottom: 200px
+
+  .back-button:hover
+    cursor: pointer
 
   #details-q1
 
@@ -11,3 +25,8 @@
   #genetics
     p
       font-size: 35px
+
+  #lineage
+    display: flex
+    flex-wrap: wrap
+    justify-content: space-between
