--- a/src/app/strain-search/strain-search.component.html
+++ b/src/app/strain-search/strain-search.component.html
@@ -1,13 +1,13 @@
 <div class="header-area">
-  <h1 id='title'>STRAIN SCOUT</h1>
+  <h1 id='title'>Strain Scout</h1>
   <img id='main-logo' src="./../../assets/images/ss-icon.png" alt="">
 </div>
 <div class="container">
   <div class="form-container row">
     <div class="col s10 offset-s1">
-      <div class="card search-form z-depth-3">
+      <div class="card search-form z-depth-2">
         <div class="card-content">
-          <p class="landing-description">Strain Scout allows you to search for cannabis strains by name to get an overview of the effects, terpenes, and genetics information. Curious about a strain but you're not sure if you'd like it? Try searching for it below!</p>
+          <p class="landing-description">Strain Scout allows you to search for cannabis strains to view on the effects, terpenes, genetics information and more. Curious about a strain but you're not sure if you'd like it? Try searching for it below!</p>
         </div>
         <div class="card-action">
           <div class="input-field">
