--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 body
   background-color: #E1E2E1
+  font-family: muli
