--- a/src/app/strain-details/strain-details.component.sass
+++ b/src/app/strain-details/strain-details.component.sass
@@ -10,7 +10,8 @@
   .back-button
     height: 5vh
     width: 5vh
-    margin-bottom: 200px
+    bottom: 200px
+    position: relative
 
   .back-button:hover
     cursor: pointer
