add error handling to all subscriptions (only console logging for now)

--- a/src/app/strain-search/strain-search.component.html
+++ b/src/app/strain-search/strain-search.component.html
@@ -7,7 +7,9 @@
     <div class="col s10 offset-s1">
       <div class="card search-form z-depth-2">
         <div class="card-content">
-          <p class="landing-description">Strain Scout allows you to search for cannabis strains to view on the effects, terpenes, genetics information and more. Curious about a strain but you're not sure if you'd like it? Try searching for it below!</p>
+          <p class="landing-description">
+            Strain Scout allows you to search for cannabis strains to view statistics on effects, terpenes, genetic information and more. Curious about a strain but you're not sure if you'd like it? Try searching for it below!
+          </p>
         </div>
         <div class="card-action">
           <div class="input-field">
