add an image to display when there is no chart data to display, and style the message a little bit

--- a/src/app/strain-details/strain-details.component.html
+++ b/src/app/strain-details/strain-details.component.html
@@ -63,8 +63,9 @@
                     [chartType]='"polarArea"'></canvas>
           </div>
         </div>
-        <div class="charts-error" *ngIf='!chartsValid'>
-          Uhoh!
+        <div class="charts-error center-align" *ngIf='!chartsValid'>
+          <h4>Unfortunately there is no effect or flavor data available for this strain.</h4>
+          <img src="./../../assets/images/highdy-sad.jpg">
         </div>
       </div>
     </div>
