--- a/src/app/strain-details/strain-details.component.sass
+++ b/src/app/strain-details/strain-details.component.sass
@@ -31,3 +31,9 @@
     display: flex
     flex-wrap: wrap
     justify-content: space-between
+
+  .charts-error
+    margin-top: 35px
+
+    img
+      max-height: 200px
