--- a/src/app/strain-details/strain-details.component.sass
+++ b/src/app/strain-details/strain-details.component.sass
@@ -1,3 +1,10 @@
+.detail-card
+  background-color: #EDDBC2
+  margin: 20px
+
+.chip
+  margin: 10px
+
 .bg-area
   width: 100%
   height: 45vh
@@ -17,6 +24,7 @@
     cursor: pointer
 
   #details-q1
+    padding-top: 5vh
 
   #details-q2
     img
@@ -31,6 +39,9 @@
     display: flex
     flex-wrap: wrap
     justify-content: space-between
+
+    p
+      font-size: 28px
 
   .charts-error
     margin-top: 35px
