--- a/src/app/strain-details/strain-details.component.sass
+++ b/src/app/strain-details/strain-details.component.sass
@@ -40,8 +40,10 @@
     flex-wrap: wrap
     justify-content: space-between
 
-    p
-      font-size: 28px
+    .chip
+      // padding: 6px
+      p
+        font-size: 15px
 
   .charts-error
     margin-top: 35px
