add express as dependency. and refactor all api calls to go through the express server

--- a/src/app/strain-details/strain-details.component.html
+++ b/src/app/strain-details/strain-details.component.html
@@ -8,7 +8,8 @@
     <ul class="tabs">
       <li class="tab col s3"><a href="#details">Details</a></li>
       <li class="tab col s3"><a href="#flav-eff">Effects and Flavors</a></li>
-      <li class="tab col s3"><a href="#company">Seed Company</a></li>
+      <!-- Not yet complete -->
+      <!-- <li class="tab col s3"><a href="#company">Seed Company</a></li> -->
     </ul>
 
     <div id="details" class="col s12 card z-depth-3">
@@ -85,10 +86,10 @@
       </div>
     </div>
 
-    <div id="company" class="col s12 card z-depth-3">
+    <!-- <div id="company" class="col s12 card z-depth-3">
       <div class="card-content">
         <p>Seed company works!</p>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
